# elca-bulletin-maker

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  bulletin_maker.spec  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api-discovery-findings.md  auth.md  bulletin-format-notes.md  hosted-deploy.md  hosted-hardening.md  jobs-artifacts.md  members.md  operator.md  original-plan.md  plans.md  rite-engine.md  runbook.md  sns-cache.md
docs/reference/: README.md
docs/research/2026-07-liturgy-strategy/: 00-strategy.html  01-codebase-audit.md  02-domain-research.md  03-bulletin-corpus.md  04-competitive-landscape.md  05-open-data-audit.md  06-provider-postures.md  07-implementation-vision.html  07-implementation-vision.md  08-flexible-calendar-rite-architecture.md  09-elca-occasion-services.md  10-pd-text-sourcing.md  11-content-source-layer.md  12-sns-verification.md  13-service-of-the-word.md  README.md
installer/: windows.iss
scripts/: capture.py  download_offertory_asset.py  explore_and_download.py  generate_icon.py  generate_test.py  migrate_sqlite.py  test_sns_client.py  visual_diff.py
scripts/data/: format_metadata.json  holy_communion_tree.json
src/bulletin_maker/: __init__.py  exceptions.py  updater.py  version.py
src/bulletin_maker/core/: __init__.py  calendar.py  content_source.py  content_views.py  documents.py  models.py  naming.py  past_runs.py  pd_text.py  profile.py  rcl_calendar.py  rite.py  service_form.py  static_text.py  text_catalog.py
src/bulletin_maker/profiles/: ascension.toml
src/bulletin_maker/renderer/: __init__.py  filters.py  html_renderer.py  image_manager.py  paper.py  pd_text.py  pdf_engine.py  prayers_parser.py  rite_resolver.py  season.py  settings.py  static_text.py  text_utils.py
src/bulletin_maker/sns/: __init__.py  client.py  content_service.py  models.py  prefetch.py  rtf_parser.py  service_fill.py  service_parser.py
src/bulletin_maker/ui/: __init__.py  api.py  app.py  icon.icns
src/bulletin_maker/web/: app.py  (+18 more)
tests/: test_auth.py  test_calendar.py  test_canonical_slot.py  test_child_rite_embed.py  test_church_texts.py  test_content_source.py  test_core.py  test_cs2_pull.py  test_daily_office.py  test_embed_text_gating.py  test_filters.py  test_funeral_wedding.py  test_html_renderer.py  test_image_manager.py  test_integration.py  test_jobs.py  test_layout_regression.py  test_library_rites.py  test_members.py  test_observability.py  test_operator.py  test_paper.py  test_past_runs.py  test_pdf_engine.py  test_plans.py  test_prayers_parser.py  test_profile.py  test_rcl_provider.py  test_resolver_sequence_snapshot.py  test_rite.py  test_rite_crud.py  test_rite_export_import.py  test_rite_resolver.py  test_rite_sections.py  test_rite_variables.py  test_rtf_parser.py  test_season.py  test_seasonal_customs.py  test_service_fill.py  test_service_parser.py  (+8 more)
tests/fixtures/: sns_service_sample.html
tests/parity/: README.md  conftest.py  test_parity.py  variants.py
(+66 files in other folders)
