[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bulletin-maker"
dynamic = ["version"]
description = "Automated church bulletin generator for Ascension Lutheran Church"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "httpx",
    "python-dotenv",
    "Jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "playwright>=1.40",
    "pytest",
]
renderer = [
    "pypdf",
    "Pillow",
    "playwright>=1.40",
]
app = [
    "pywebview>=5.0",
    "pypdf",
    "Pillow",
    "playwright>=1.40",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
bulletin-maker = "bulletin_maker.ui.app:main"

[tool.hatch.version]
path = "src/bulletin_maker/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bulletin_maker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
