[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bulletin-maker"
dynamic = ["version"]
description = "Automated church bulletin generator for Ascension Lutheran Church"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "httpx",
    "python-dotenv",
    "Jinja2>=3.1",
    "tomli>=2; python_version < '3.11'",
    "pypdf",
    "Pillow",
    "playwright>=1.40",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
bulletin-maker = "bulletin_maker.web.app:main"

[tool.hatch.version]
path = "src/bulletin_maker/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bulletin_maker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not layout'"
markers = [
    "layout: full PDF layout regression (slow, needs Chromium); run with -m layout",
]
